--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  path_provider: ^1.1.0
   flutter_launcher_icons: "^0.11.0"
+  http: ^0.13.5
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
